# VoiceScreen

./: .env.example  .gitignore  CLAUDE.md  Makefile  OPS.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a2a2e90a20ae_init.py  a7d5b1c46e23_add_candidate_active.py  b1c3d4e5f601_rename_mango_call_id_to_voximplant.py  b8e7c612a934_add_candidate_dispatch_state.py  c3f1a0b2d701_add_score_reasoning_and_answers_to_calls.py  c9f8d023b145_add_vacancy_dispatch_paused.py  d0a9e145c267_add_vacancy_call_slots.py  d4a2f1c3e802_add_client_api_key.py  e5b3c8d09f01_add_users_table.py  f6c4a9b50d12_add_scenarios_table.py  g7d5e2c4f803_add_call_summary_and_vacancy_notify_sms.py
app/: CLAUDE.md  config.py  main.py
app/api/: _time.py  auth.py  calls.py  candidates.py  clients.py  dashboard.py  deps.py  router.py  scenarios.py  team.py  users.py  vacancies.py  webhooks.py  ws.py
app/bot/: CLAUDE.md  __main__.py  handlers.py
app/core/: CLAUDE.md  anonymize.py  dialog.py  dispatch_window.py  llm.py  scenario.py  scoring.py  stt.py  tts.py
app/db/: CLAUDE.md  models.py  session.py
app/exports/: xlsx.py
docs/: 00_README.md  01_roadmap_30_60_90.md  02_tech_architecture.md  03_sales_playbook.md  04_pricing_economics.md  05_legal_compliance.md  06_metrics_risks.md  COMMANDS.md  DISPATCH_RULES.md  ENV_SETUP.md
files/: CLAUDE.md  README.md  ROADMAP.md  candidates_template.xlsx
scenarios/: courier_screening.yaml
scripts/: make_candidates_template.py  simulate_dialog.py  sync_vm.sh  test_call.py
tests/: test_anonymize.py  test_dialog_session.py  test_dispatch_window.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  (+1 more)
(+46 files in other folders)
